# spyrox

./: .gitignore  LICENSE  README.md  pyproject.toml  sir_covariates_results.ipynb  sir_example.ipynb
jobs/: job.sh  submitter.sh
plots/: style.mplstyle
scripts/: run_task.py
spyrox/: plot_utils.py  simulator.py  sirsde.py  train.py  utils.py
spyrox/tasks/: sirsde.py  sirsde_with_covariates.py
tests/: sirsde.py
