[project]
authors = [{ name = "Daniel Ward", email = "danielward27@outlook.com" }]
dependencies = [
    "flowjax>=15.0",
    "equinox",
    "tqdm",
    "optax",
    "numpyro",
    "diffrax",
]
description = "Equinox and numpyro interface."
name = "spyrox"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.0"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--jaxtyping-packages=spyrox,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"


[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "B", "D", "COM", "I", "UP", "TRY004", "RET", "PT", "FBT"]
ignore = ["D102", "D105", "D107", "F722"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"*.ipynb" = ["D"]
"__init__.py" = ["D"]

[tool.setuptools]
packages = ["spyrox"]
